<resources>

    <string name="name_hint">Wpisz nazwę zadania</string>
    <string name="name_label">Nazwa</string>
    <string name="details_label">Szczegóły</string>
    <string name="status_label">Stan wykonania</string>
    <string name="category_label">Kategoria</string>
    <string name="done_label">Wykonane</string>

    <string name="task_add_new">Nowe zadanie</string>
    <string name="show_subtitle">Pokaż podtytuł</string>
    <string name="hide_subtitle">Ukryj podtytuł</string>
    <string name="subtitle_format">%1$d zadań</string>
    <string name="app_name">Lista Zadań</string>
</resources>