<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/background">

    <!--style="?android:listSeparatorTextViewStyle"-->
    <TextView
        style="@style/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"/>

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary"/>

    <TextView
        style="@style/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"/>

    <EditText
        style="@style/separator"
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:autofillHints=""
        android:inputType="date"/>


    <TextView
        style="@style/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_label"/>

    <CheckBox
        style="@style/separator"
        android:id="@+id/task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label"/>

    <TextView
        style="@style/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_label"/>

    <Spinner
        android:id="@+id/task_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="@dimen/task_item_padding"
        android:textColor="@color/primary" />

</LinearLayout>